--- a/assets/info.html
+++ b/assets/info.html
@@ -31,9 +31,9 @@
             <a href="https://github.com/schjmann19" target="_blank">me</a> with the sole purpose of practicing.<br>
             I originally started it out of boredom and texturawasd's suggestion, and have continued it since. It is heavily inspired in
             early iterations of Minecraft.<br>
-            It is <abbr title="'free' as in free and libre">free</abbr> & open source <a href="https://github.com/schjmann19/b3dv" target="_blank">(see github repo)</a>
+            It is <abbr title="'free' as in free & as in libre">free</abbr> & open source <a href="https://github.com/schjmann19/b3dv" target="_blank">(see github repo)</a>
         </p><p>
-            It's written in <abbr title="C11 (ISO/IEC 9899:2011) + POSIX; Raylib is C99 (ISO/IEC 9899:1999)">pure C</abbr> + <a href="https://www.raylib.com/" target="_blank">Raylib</a>, with few dependencies <a href="#deps"><i>[see dependencies]</i></a>; and (for now) features
+            It's written in <abbr title="C11 (ISO/IEC 9899:2011) + POSIX.1-2008; Raylib is C99 (ISO/IEC 9899:1999)">pure C</abbr> + <a href="https://www.raylib.com/" target="_blank">Raylib</a>, with few dependencies <a href="#deps"><i>[see dependencies]</i></a>; and (for now) features
             just a basic world the player can walk on, break and place blocks, and save (different worlds)
         </p>
         </section> <!-- summary/header -->
@@ -41,7 +41,7 @@
         <section> <!-- general information -->
         <h2>Overview:</h2>
             <p>
-                It is written in <a href="https://www.c-language.org/" target="_blank">C</a> because it's the only language I <i>mostly</i> know how to program in.<br>
+                It is written in <a href="https://www.c-language.org/" target="_blank">C</a> because it's the only language I <em>mostly</em> know how to program in.<br>
                 Also, since the codebase is <abbr title="currently >5k lines of code">not big</abbr> and is rather simple, it's straightforward to keep it portable across operating systems.<a href="#explanation"><i>[see codebase explanation]</i></a><br>
                 Features:<br>
                 - Simple world with terrain<br>
@@ -69,7 +69,7 @@
         </section> <!-- general information -->
 
         <section> <!-- commands -->
-        <h2>In-game commands</h2>
+            <h2>In-game commands</h2>
             <p>
                 Commands that are usable via chat:<br>
                 /select [stone|grass|dirt|wood|sand] - Select which kind of block to place<br>
@@ -81,13 +81,13 @@
         </section> <!-- commands -->
 
         <section> <!-- in-depth explanation -->
-        <h2 id="explanation">"How does it work?" Here's the explanation:</h2>
-            <h3>Big Picture:</h3>
-            Imagine B3DV as a game engine with the following interconnected modules, top to bottom:<br>
-            [User input (kb, mouse)]<br>
-            [Menu (ui) system] & [World (physics, updates)]<br>
-            [Rendering]
-            <h3>Core components:</h3>
+            <h2 id="explanation">"How does it work?" Here's the explanation:</h2>
+                <h3>Big Picture:</h3>
+                Imagine B3DV as a game engine with the following interconnected modules, top to bottom:<br>
+                [User input (kb, mouse)]<br>
+                [Menu (ui) system] & [World (physics, updates)]<br>
+                [Rendering]
+                <h3>Core components:</h3>
 
             <details><summary><em><b>1 - Worlds:</b></em></summary><p>
                 Each world is saved as a folder with a `chunks` folder, the actual chunk data; and a world.txt file, containing data like last played timestamp and player position<br><br>
@@ -153,7 +153,7 @@
         </section> <!-- in-depth explanation -->
 
         <section> <!-- changelog and future features -->
-        <h2>Changelog:</h2>
+            <h2>Changelog:</h2>
             <details> <!-- changelog -->
             <summary>
                 While a quick & dirty change log can be found in the repo (./versions.txt); here are the changes listed plainly [expand to see]:<br>
@@ -198,7 +198,7 @@
                 0.0.2: Made slab bigger, bottom face of blocks now exists<br>
                 0.0.1: Slab of stone blocks you can walk on<br>
             </details> <!-- changelog -->
-        <h2>Future features:</h2> <!-- future features -->
+            <h2>Future features:</h2> <!-- future features -->
             <details><summary>These are planned but I don't know when they'll be added. [expand to see]</summary>
                 - Lighting:<br>
                     light levels to allow for more light sources than just the sun<br>
@@ -215,47 +215,48 @@
         </section> <!-- changelog and future features -->
 
         <section> <!-- Build & Dependencies -->
-        <h2>Build system:</h2>
+            <h2>Build system:</h2>
             <p>
                 It's just a makefile. run `make` and that's it. (linux)<br>
                 You need raylib. And clang.<br>
                 If you're on windows: <s>why?</s> go on a linux machine (or use <a href="https://learn.microsoft.com/windows/wsl/install" target="_blank">WSL2</a>) and use the "windows" make target. (Just run `make windows`)
             </p>
 
-    <h3 id="deps">Dependencies:</h3>
-        <p>
-            <a href="https://clang.llvm.org/" target="_blank">clang</a>, <a href="https://www.raylib.com/" target="_blank">Raylib</a>, and C standard library of course.<br>
-            <b><em>How to install:</em></b><br>
-            <em>Arch:</em><br>
-            <code>sudo pacman -S --needed clang base-devel git raylib</code><br>
-            <em>Debian:</em><br>
-            <code>sudo apt update && sudo apt install clang build-essential git libraylib-dev</code><br>
-            <em>Fedora:</em><br>
-            <code>sudo dnf install clang @development-tools git raylib-devel</code><br>
-            <em>RHEL:</em><br>
-            <code>sudo dnf groupinstall "Development Tools"</code><br>
-            <code>sudo dnf install clang git raylib-devel</code><br>
-            <code>sudo dnf install epel-release</code><br>
-            <em>Alpine:</em><br>
-            <code>sudo apk add clang build-base git raylib-dev</code><br>
-            <em>Void:</em><br>
-            <code>sudo xbps-install -S clang base-devel git raylib-devel</code><br>
-            <em>FreeBSD:</em><br>
-            <code>sudo pkg install llvm git raylib gmake</code><br>
-            <em>Windows:</em><br>
-            <small><i>Just use WSL.</i></small>
-        </p>
-            <h3>Credits:</h3>
+                <h3 id="deps">Dependencies:</h3>
+                <p>
+                <a href="https://clang.llvm.org/" target="_blank">clang</a>, <a href="https://www.raylib.com/" target="_blank">Raylib</a>, and C standard library of course.<br>
+                <b><em>How to install:</em></b><br>
+                <em>Arch:</em><br>
+                <code>sudo pacman -S --needed clang base-devel git raylib</code><br>
+                <em>Debian:</em><br>
+                <code>sudo apt update && sudo apt install clang build-essential git libraylib-dev</code><br>
+                <em>Fedora:</em><br>
+                <code>sudo dnf install clang @development-tools git raylib-devel</code><br>
+                <em>RHEL:</em><br>
+                <code>sudo dnf groupinstall "Development Tools"</code><br>
+                <code>sudo dnf install clang git raylib-devel</code><br>
+                <code>sudo dnf install epel-release</code><br>
+                <em>Alpine:</em><br>
+                <code>sudo apk add clang build-base git raylib-dev</code><br>
+                <em>Void:</em><br>
+                <code>sudo xbps-install -S clang base-devel git raylib-devel</code><br>
+                <em>FreeBSD:</em><br>
+                <code>sudo pkg install llvm git raylib gmake</code><br>
+                <em>Windows:</em><br>
+                <small><i>Just use WSL.</i></small>
+            </p>
+        </section> <!-- Build & Dependencies -->
+
+        <h3>Credits:</h3> <!-- credits -->
         <p>
             Idea: Leandro Testa ("texturawasd")<br>
             update-version.py, organize-screeshots.py: Alina Kravetska<br>
             Raylib: Ramon Santamaria (raysan5)<br>
             Everything else: me<br>
             (BSD-3-Clause lic.)
-        </p>
-    </section> <!-- Build & Dependencies -->
+        </p> <!-- credits -->
     <small>
-        (c) 2026 Jimena Neumann <!-- feb 2026, NUSSS-compliant as per SSOTF-2-->
+        (c) 2026 Jimena Neumann <!-- feb 2026, NUSSS-compliant as per SSOTF-2 -->
     </small>
 </body>
 </html>
